Fixed alignments

--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,7 @@ textarea {
 
 header,
 footer {
+  background-color: #202322;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -253,6 +254,10 @@ footer .copyright {
 /* Hero Area */
 
 .hero-area {
+  background: url(../img/unplugged-retreat.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -268,6 +273,7 @@ footer .copyright {
 /* Aside */
 
 aside {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -303,6 +309,9 @@ input[type=button] {
 /* Features */
 
 .features {
+  background: url('../img/features.jpg');
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -328,6 +337,7 @@ input[type=button] {
   text-align: center;
   margin: 0;
 }
+
 
 /* Reviews */
 
@@ -501,6 +511,16 @@ input[type=button] {
       margin: 100px 0;
   }
 
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
   /* Header */
 
   header {
@@ -530,6 +550,15 @@ input[type=button] {
   }
 
   /* Hero Area */
+  .hero-area {
+    min-height: 600px;
+  }
+
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+}
 
   /* Aside */
   aside .content-wrapper {
@@ -547,6 +576,10 @@ input[type=button] {
 
   /* Features */
 
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
   .features article {
     display: flex;
     justify-content: center;
@@ -556,7 +589,7 @@ input[type=button] {
   }
 
   .features .features-item-description {
-      width: 50%;
+      width: 62%;
   }
 
   /* Reviews */
@@ -565,8 +598,18 @@ input[type=button] {
     justify-content: space-between;
   }
 
+  .reviews h2 {
+    width: 85%;
+  }
+
+  .reviews article figure,
   .reviews article div {
-      width: 49%;
+    width: 49%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
   }
 
   /* Footer */
@@ -579,10 +622,20 @@ input[type=button] {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
 
   footer .contact {
       margin-bottom: 0;
+  }
+
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+      line-height: 1.285;
   }
 
   footer .copyright {
@@ -614,6 +667,10 @@ input[type=button] {
         align-items: flex-start;
 }
 
+.contact-content h4 {
+  font-size: 1.5em;
+}
+
 /* ==========================================================================
    FAQ Page
    ========================================================================== */
@@ -622,11 +679,17 @@ input[type=button] {
     }
 
     .faq-content {
-        flex-basis: 40%;
+        flex-basis: 45%;
     }
 
     .faq h2 {
         width: 100%;
+    }
+
+    .faq h4,
+    .faq p {
+        font-size: .875em;
+        line-height: 1.125;
     }
 
 }
@@ -639,44 +702,75 @@ input[type=button] {
   }
 
   .content-wrapper {
-    width: 960px;
+    max-width: 960px;
   }
 
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+      font-size: 1.875em;
+  }
+
+  p {
+      font-size: 1.125em;
+      line-height: 1.333;
+  }
   /*Hero*/
   .hero-area h1 {
-    width: 60%;
+    font-size: 3.75em;
+    width: 80%;
   }
 
   /*Aside*/
   aside .content-wrapper {
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   aside .content-wrapper, .form-description,
   aside .content-wrapper, .form {
-    width: 32%;
+    width: 30%;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
   }
 
   /*Features*/
   .features h2 {
-    width: 92%;
+    width: 90%;
   }
 
   .features article {
-    flex-basis: 85%;
+    flex-basis: 33%;
   }
 
   /*Review*/
   .review article div {
-    width: 15%;
+    width: 42%;
+  }
+
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
+
+  footer h4 {
+    font-size: 1.875em;
   }
 
   /* ==========================================================================
    About Page
    ========================================================================== */
-    .mission h2,
-    .contact-section .content-wrapper h2 {
-        width: 100%;
+   .mission h2,
+   .contact-section .content-wrapper h2 {
+       width: 95%;
+       font-size: 3em;
+   }
+
+    .contact-content h4 {
+      font-size: 1.875em;
     }
 
     /* ==========================================================================
@@ -684,8 +778,14 @@ input[type=button] {
    ========================================================================== */
     .faq h2 {
         width: 100%;
+        font-size: 3em;
     }
 
+    .faq h4,
+    .faq p {
+        font-size: 1.125em;
+        line-height: 1;
+    }
 }
 
 /* ==========================================================================
